# arguslm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 02f5d910ae59_initial_migration_with_all_tables.py  f2d792a082d9_add_ttft_tps_output_tokens_to_uptime_.py
app/: __init__.py  main.py
app/api/: alerts.py  benchmarks.py  models.py  monitoring.py  providers.py
app/api/schemas/: alert.py  benchmark.py  model.py  monitoring.py  provider.py
app/core/: alert_evaluator.py  benchmark_engine.py  config.py  litellm_client.py  metrics.py  prompt_packs.py  scheduler.py  security.py  uptime.py
app/core/providers/: __init__.py
app/db/: __init__.py  init.py
app/discovery/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  google_ai_studio.py  ollama.py  openai.py  static.py
app/models/: __init__.py  alert.py  benchmark.py  model.py  monitoring.py  provider.py
arguslm/: __init__.py  client.py  exceptions.py
arguslm/schemas/: __init__.py  alert.py  model.py  monitoring.py
arguslm/server/: __init__.py  main.py
arguslm/server/api/: alerts.py  benchmarks.py  models.py  monitoring.py  providers.py
arguslm/server/core/: alert_evaluator.py  benchmark_engine.py  config.py  litellm_client.py  metrics.py  scheduler.py  throttle.py  uptime.py
arguslm/server/db/: __init__.py  init.py
arguslm/server/discovery/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  google_ai_studio.py  ollama.py  openai.py  static.py
arguslm/server/models/: __init__.py  alert.py  base.py  benchmark.py  model.py  monitoring.py  provider.py
data/: models_registry.json
docs/: CONFIGURATION.md  PRODUCT_REVIEW.md  TROUBLESHOOTING.md  api-reference.md  architecture.md  comparison.md  sdk-guide.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: alerts.ts  benchmarks.ts  client.ts  dashboard.ts  export.ts  models.ts  monitoring.ts  providers.ts
frontend/src/components/: ModelSelector.tsx  NotificationBell.tsx  ThemeProvider.tsx
frontend/src/pages/: BenchmarksPage.tsx  DashboardPage.tsx  ModelsPage.tsx  MonitoringPage.tsx  ProvidersPage.tsx  SettingsPage.tsx
frontend/src/types/: alert.ts  benchmark.ts  dashboard.ts  model.ts  monitoring.ts  provider.ts
scripts/: generate-secrets.py  generate_provider_types.py
tests/: test_alert_evaluator.py  test_api_alerts.py  test_api_benchmarks.py  test_api_models.py  test_api_monitoring.py  test_api_providers.py  test_benchmark_engine.py  test_discovery.py  test_e2e.py  test_export.py  test_litellm_client.py  test_main.py  test_metrics.py  test_model_operations.py  test_models.py  test_models_registry.py  test_throttle.py  test_uptime.py
tmp/: task5_summary.md
typings/: pytest.pyi
(+10 files in other folders)
